tons of updates

--- a/index.html
+++ b/index.html
@@ -16,7 +16,21 @@
         <h4 id="subtext"></h4>
       </div>
       <div id="contactSection">
-        <a href="#">contact</a>
+        <button id="contactButton">contact</button>
+        <div id="contactImages">
+          <img src="inc/githubIcon.png" alt="">
+          <img src="inc/instagramIcon.png" alt="">
+          <img src="inc/twitterIcon.png" alt="">
+          <img src="inc/linkedinIcon.png" alt="">
+        </div>
+        <div id="additionalContact">
+          <div id="contactInformation">
+            <ul>
+              <li><a href="tel:8019415421">phone: 801-941-5421</a></li>
+              <li><a href="mailto:joe@joethemovie.com">email: joe@joethemovie.com</a></li>
+            </ul>
+          </div>
+
       </div>
     </header>
     <nav>
@@ -30,7 +44,7 @@
     </nav>
     <div class="portfolioSection">
 
-      
+
     </div>
   </body>
 </html>
