Attempting to make this properly sync.

--- a/index.html
+++ b/index.html
@@ -59,12 +59,9 @@
 
 <!-- Code Content -->
 
-        <div id="videoSection" class="sectionVis">
-          <div class="codeHead">
-          </div>
-          <div class="codeBody">
-            <div id="videoPlayer">
-              <video id="video" class="video-js" controls preload="auto" width="380" height="300"
+
+            <div id="videoSection" class="sectionVis">
+              <video id="videoPlayer" class="video-js" controls preload="auto" width="956" height="346"
               poster="MY_VIDEO_POSTER.jpg" data-setup="{}">
                 <source src="inc/test.mp4" type='video/mp4'>
                 <p class="vjs-no-js">
@@ -72,9 +69,15 @@
                 </p>
               </video>
               <script src="http://vjs.zencdn.net/5.19.1/video.js"></script>
+              <ul class="exampleLayout">
+                <li><a href="inc/test.mp4" class="videoContent"><img src="inc/audioActive.png" alt="" data-media="inc/test.mp4"></a></li>
+                <li><a href="inc/test2.mp4" class="videoContent"><img src="inc/audioActive.png" alt="" data-media="inc/test2.mp4"></a></li>
+                <li><a href="inc/test3.mp4" class="videoContent"><img src="inc/audioActive.png" alt="" data-media="inc/test3.mp4"></a></li>
+                <li><a href="#" class="videoContent"><img src="inc/audioActive.png" alt=""></a></li>
+                <li><a href="#" class="videoContent"><img src="inc/audioActive.png" alt=""></a></li>
+              </ul>
             </div>
-          </div>
-        </div>
+
         <div id="codingSection" class="sectionVis">
           <div class="codeHead">
 
